# sb-sim-Secure-Boot-Chain-Simulator

./: README.md  pyproject.toml
src/sbsim/: cli.py  hash.py
tests/: test_hash.py
